# FaceAndEmotionRecognition

./: CMakeLists.txt  README.md
datas/: icml_face_data.csv
models/: CNN_model.ipynb
src/: Main.cpp
src/detection/: detection.cpp  detection.h
src/emotion_recognition/: emotion_recognition.cpp  emotion_recognition.h  pre-processing.cpp
src/image/: Image.cpp  Image.h
src/metrics/: metrics.cpp  metrics.h
src/utils/: config.h  draw.cpp  draw.h  evaluation.cpp  evaluation.h  filesystem.cpp  filesystem.h  pipeline.cpp  pipeline.h  selection.cpp  selection.h
